[package]
name = "asset-pipeline"
keywords = ["assets", "pipeline"]
categories = ["web-programming"]
version = "0.1.0"
description = "Generic asset pipeline"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
walkdir = "2.4.0"
image = "0.24.7"
base64 = "0.21.4"
