[package]
name = "nom-nom"
version = "0.1.0"
description = "Recipes for a Rust developer"
readme = "README.md"
keywords = ["recipes"]
categories = ["web-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = [
  "asset-pipeline",
  "nom-nom-assets"
]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://nom-nom.nl"
repository = "https://www.github.com/b-n/nom-nom"

[dependencies]
yew = { version = "0.20.0", features = ['csr'] }
yew-router = { version = "0.17.0" }
# Used for Swipeablehook
yew-hooks = { version = "0.2.0" }
# loading of locales/ and t!() UI keys
rust-i18n = { version = "2.2.1" }
# CSS in your Rust
stylist = { version = "0.11", features = ['yew_use_style', 'parser'] }
# [de]serialization of recipes
rkyv = { version = "0.7.42", default_features = false, features = ['alloc', 'size_32'] }
# HTTP requests for retrieving recipes
gloo-net = { version = "0.4.0", default_features = false, features = ['http'] }
# Debugging (console logging)
web-sys = { version = "0.3.64" }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
