[package]
name = "recipe-builder"
version = "0.1.0"
description = "Build pipeline for nom-nom"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pulldown-cmark = "0.9.3"
rkyv = { version = "0.7.42" }
walkdir = "2.4.0"
nom-nom = { version = "0.1.0", path = "../" }
